--- a/ckanext/tess/templates/nodes/DK.html
+++ b/ckanext/tess/templates/nodes/DK.html
@@ -1,6 +1,6 @@
 {% set node_name = 'Denmark' %}
+{% set country_code = 'DK' %}
 {% extends "node_template.html" %}
-
 
 {#
 Override blocks from the nodes_template.html here to add your own custom configuration.
