--- a/ckanext/tess/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/tess/templates/package/snippets/package_basic_fields.html
@@ -78,7 +78,7 @@
         <label for="field-private" class="control-label">{{ _('Visibility') }}</label>
         <div class="controls">
           <select id="field-private" name="private">
-            {% for option in [('True', _('Private')), ('False', _('Public'))] %}
+            {% for option in [('False', _('Public')), ('True', _('Private'))] %}
             <option value="{{ option[0] }}" {% if option[0] == data.private|trim %}selected="selected"{% endif %}>{{ option[1] }}</option>
             {% endfor %}
           </select>
