--- a/ckanext/tess/templates/package/snippets/resource_help.html
+++ b/ckanext/tess/templates/package/snippets/resource_help.html
@@ -1,6 +1,6 @@
 <section class="module module-narrow module-shallow">
   <h2 class="module-heading"><i class="icon-info-sign"></i> {{ _('What\'s a resource?') }}</h2>
   <div class="module-content">
-    <p>{{ _('A resource can be any file or link to a file containing useful data.') }}</p>
+    <p>{{ _('A resource can be any document containing useful data. Just provide a URL link to it here.') }}</p>
   </div>
 </section>
