--- a/ckanext/tess/templates/footer.html
+++ b/ckanext/tess/templates/footer.html
@@ -4,8 +4,8 @@
             <div class="footer-links attribution">
                 <div style="float: left;">
                     <p style="padding-top: 10px;">
-                        <strong>Version:</strong> 1.0 alpha<br>
-                        <strong>Contact us:</strong> <a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info</a><br>
+                        <strong>Version: </strong>{{ h.get_tess_version() }}<br>
+                        <strong>Contact us: </strong><a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info</a><br>
                     </p>
                 </div>
                 <div class="" style="float: right; vertical-align: middle;">
