--- a/ckanext/tess/templates/event/read.html
+++ b/ckanext/tess/templates/event/read.html
@@ -16,8 +16,8 @@
     {% block events_search_form %}
         {% set sorting = [ (_('Date Ascending'), 'end asc'),
                            (_('Date Descending'), 'end desc')] %}
-        {% snippet 'snippets/search_form.html',     fields=[('category', c.category), ('include_expired', c.include_expired_events)],
-                                            type=(c.category or 'event'),
+        {% snippet 'snippets/search_form.html',     fields=[('category', c.category.lower()), ('include_expired', c.include_expired_events)],
+                                            type=(c.category.lower() or 'event'),
                                             query=c.q,
                                             sorting=sorting,
                                             sorting_selected=c.sort_by_selected,
