--- a/ckanext/tess/fantastic/tess.css
+++ b/ckanext/tess/fantastic/tess.css
@@ -556,3 +556,22 @@ hr.style-one {
     #eeeeee
   );
 }
+
+div.workflow_element_info{
+	background-color:white;
+	border:1px solid lightgray;
+	padding-left:1%;
+	padding-right:1%;
+	padding-bottom:1%;
+	/*display:none;*/
+	margin-top:1em;
+	margin-bottom:1em;
+    border-radius: 4px;
+    box-shadow: -2px -2px 5px #DDD;
+}
+
+div.workflow_element_info ul.items{
+	margin:0px;
+    padding: 0px;
+    list-style-type: none;
+}
